# pdf_pycrack

./: .gitattributes  .gitignore  .pre-commit-config.yaml  PUBLISHING.md  QWEN.md  README.md  RELEASING.md  core.py  docs-build.sh  example.py  main.py  mkdocs.yml  pdf_cracker.py  pyproject.toml  release.sh
.clinerules/: CLINE.md
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  lint.yml  performance-regression.yml  publish.yml  test-all-versions.yml  test.yml
benchmark/: README.md  benchmark.py  regression_detector.py  run.py
benchmark/results/: benchmark_20250714_211702.json  benchmark_20250714_212048.json  benchmark_20250714_232840.json  benchmark_20250714_233159.json  benchmark_20250714_235903.json  benchmark_20250719_204715.json  benchmark_20250816_113136.json  benchmark_history.csv
docs/: README.md  index.md
docs/api/: cli.md  core.md  models.md
docs/development/: contributing.md  releases.md  testing.md
docs/getting-started/: basic-usage.md  installation.md  quickstart.md
docs/performance/: benchmarking.md  optimization.md
docs/user-guide/: cli.md  configuration.md  error-handling.md  library.md
scripts/: README.md  generate_pdfs.py
src/pdf_pycrack/: __init__.py  benchmark.py  cli.py  core.py  main.py  password_generator.py  supervisor.py  validator.py  worker.py
src/pdf_pycrack/formatting/: errors.py  output.py
src/pdf_pycrack/models/: cracking_result.py
tests/: test_benchmark.py  test_error_handling.py  test_pdf_cracking.py  test_worker_line51.py  test_worker_line51_specific.py  test_worker_line54.py  test_worker_line54_specific.py
