[project]
name = "pdf-pycrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pikepdf>=9.9.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
pdf-pycrack = "pdf_pycrack.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "black>=24.4.2",
    "ruff>=0.5.5",
    "pre-commit>=4.2.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
