[project]
name = "pdf-pycrack"
version = "0.1.0"
description = "A fast, parallel PDF password cracker written in Python."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Matej Hornik", email = "bachini256@gmail.com" }
]
maintainers = [
    { name = "Matej Hornik", email = "bachini256@gmail.com" }
]
keywords = ["pdf", "password", "cracker", "security", "parallel"]
classifiers = [
    "Development Status :: 1 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "pikepdf>=9.9.0",
    "tqdm>=4.67.1",
    "rich>=13.7.1",
]

[project.urls]
"Homepage" = "https://github.com/hornikmatej/pdf_pycrack"
"Bug Tracker" = "https://github.com/hornikmatej/pdf_pycrack/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
pdf-pycrack = "pdf_pycrack.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "black>=24.4.2",
    "ruff>=0.5.5",
    "pre-commit>=4.2.0",
    "isort>=6.0.1",
    "pypdf2>=3.0.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
markers = [
    "numbers: tests with numbers",
    "letters: tests with letters",
    "special_chars: tests with special characters",
    "mixed: tests with mixed characters",
]

[tool.isort]
profile = "black"
